tests/rascal/negative/type_errors/L1/17_expression_ES10_D4_47.ob
MODULE Test17;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               r := (((1223 MOD (+ z)) MOD 1223) > 0);
               y := 1223;
               p := (2 >= 1223);
               q := (q OR (2 < (- x)));
               z := ((- ((- z) - x)) DIV (2 * ((x DIV 2) MOD 1223)));
               x := ((+ 200) MOD y);
  (* error *)  r := (((+ z) >= ((p * y) - (1223 - y))) OR (((+ 200) - (+ 200)) <= x));
               q := ((2 - (2 + z)) <= y);
               r := (x > 1223);
               p := ((z < z) OR (~ q))
END Test17.